--- a/man/mkv-extractor-qt5.1
+++ b/man/mkv-extractor-qt5.1
@@ -1,4 +1,4 @@
-.TH man 1 "28 Sep 2016" "Version 5.*" "MKV Extractor Qt5 man"
+.TH man 1 "05 Aug 2022" "Version 5.*" "MKV Extractor Qt5 man"
 
 
 .SH NOM
@@ -30,6 +30,8 @@ Here are the possibilities by \fBMKV Extractor Qt5\fP :
 .br
     - Modification of the bitrate of the audio files with \fIFFMpeg\fP or \fIAVConv\fP.
 .br
+    - Conversion of the subtitles SUP/PGS to SUB with \fIBDSup2Sub\fP or \fIFFMpeg\fP.
+.br
     - Conversion of the subtitles SUB/IDX to SRT with \fIQtesseract5\fP (multi cpu mode).
 .br
     - Check of the MKV file with \fIMKValidator\fP.
@@ -38,12 +40,14 @@ Here are the possibilities by \fBMKV Extractor Qt5\fP :
 
 
 .SH INFOS
-\fIMKVMergeGui\fP is available in English, French and  Czech partially.
+\fIMKVMergeGui\fP is available in English, French and Czech partially.
 
 
 .SH AUTEUR
 \fITerence Belleguic\fP aka \fIHizo\fP <hizo@free.fr>
 .br
-Software page (Ubuntu-fr.org forum) : https://forum.ubuntu-fr.org/viewtopic.php?id=1508741
+Software page (github) : https://github.com/Hizoka76/MKV-Extractor-Qt5
+.br
+To talk about it in French (forum Ubuntu-fr.org) : https://forum.ubuntu-fr.org/viewtopic.php?id=1508741
 .br
 The icon has been created from icons of the \fIOxygen\fP theme : https://techbase.kde.org/Projects/Oxygen
