--- a/man/mkv-extractor-qt5.fr.1
+++ b/man/mkv-extractor-qt5.fr.1
@@ -1,4 +1,4 @@
-.TH man 1 "28 Sep 2016" "Version 5.*" "Manuel de MKV Extractor Qt5"
+.TH man 1 "05 Aou 2022" "Version 5.*" "Manuel de MKV Extractor Qt5"
 
 
 .SH NOM
@@ -10,9 +10,9 @@
 
 
 .SH DESCRIPTION
-\fBMKV Extractor Qt5\fP est un logiciel graphique qui permet de manipuler le contenu de fichier MKV grace à différents logiciels.
+\fBMKV Extractor Qt5\fP est un logiciel graphique qui permet de manipuler le contenu de fichier MKV grâce à différents logiciels.
 .br
-Son but n'est pas de concurencer \fIMKVMergeGui\fP mais de le compléter.
+Son but n'est pas de concurrencer \fIMKVMergeGui\fP mais de le compléter.
 .LP
 Voici les possibilités offertes par \fBMKV Extractor Qt5\fP :
 .br
@@ -30,7 +30,9 @@ Voici les possibilités offertes par \fBMKV Extractor Qt5\fP :
 .br
     - Modification du débit des fichiers audio avec \fIFFMpeg\fP ou \fIAVConv\fP.
 .br
-    - Convertion des sous-titres SUB/IDX en SRT avec \fIQtesseract5\fP (mode multi cpu).
+    - Conversion des sous-titres SUP/PGS en SUB avec \fIBDSup2Sub\fP ou \fIFFMpeg\fP.
+.br
+    - Conversion des sous-titres SUB/IDX en SRT avec \fIQtesseract5\fP (mode multi cpu).
 .br
     - Vérification du fichier MKV avec \fIMKValidator\fP.
 .br
@@ -38,12 +40,14 @@ Voici les possibilités offertes par \fBMKV Extractor Qt5\fP :
 
 
 .SH INFOS
-\fIMKVMergeGui\fP est disponible en Français, Anglais et partiellement Tchèque.
+\fIMKVMergeGui\fP est disponible en Français, Anglais et partiellement en Tchèque.
 
 
 .SH AUTEUR
 \fITerence Belleguic\fP aka \fIHizo\fP <hizo@free.fr>
 .br
-Page du logiciel (forum Ubuntu-fr.org) : https://forum.ubuntu-fr.org/viewtopic.php?id=1508741
+Page du logiciel (github) : https://github.com/Hizoka76/MKV-Extractor-Qt5
+.br
+Pour en discuter (forum Ubuntu-fr.org) : https://forum.ubuntu-fr.org/viewtopic.php?id=1508741
 .br
 L'icône a été créée depuis des icônes du théme \fIOxygen\fP : https://techbase.kde.org/Projects/Oxygen
